--- a/.gitignore
+++ b/.gitignore
@@ -27,4 +27,25 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# комментарий — эта строка игнорируется
+# игнорировать файлы с расширением .pyc,
+# * - любое количество символов (ноль и больше),
+*.pyc
+# НО отслеживать файл main.pyc
+Работа с локальным репозиторием с помощью консольного git 8
+# несмотря на то, что мы игнорируем все .pyc файлы с помощью предыдущего правила
+!main.pyc
+# ? - ноль или один символ
+# Исключить файлы text.txt, test.txt, tet.txt и т.д.
+te?t.txt
+# игнорировать только файл main.py находящийся в корневом каталоге
+# не относится к файлам вида <папка>/main.py
+/main.py
+# игнорировать все файлы в каталоге .idea/
+.idea/
+# игнорировать файлы с расширением .txt, только в папке doc, но не в подпапках папки doc
+doc/*.txt
+# игнорировать все .txt файлы в каталоге doc/ и всех его подкаталогах
+doc/**/*.txt
+
 # End of https://www.toptal.com/developers/gitignore/api/windows
