Добавил описание и проект

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ doc/*.txt
 doc/**/*.txt
 
 # End of https://www.toptal.com/developers/gitignore/api/windows
+Проект по предобработке и анализу/анализ рынка игр.ipynb
